--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
+body{
+    text-align: center;
+    background: #fff;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+h1{
+    color: #396;
+    font-weight: bold;
+    font-size: 50px;
+    margin: 135px 0px 20px;
+}
+
 #introduction > div{
     padding: 50px;
     background-color: hotpink;
-    display: inline-block;
 }
+
 .smalltext{
     padding-top: 5px;
     font-size: 25px;
