--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,21 @@
 body{
     text-align: center;
-    background: #fff;
     font-family: sans-serif, Arial, Helvetica, sans-serif;
     font-weight: bold;
+    background-color: black;
+    color: white;
+    justify-content: center;
+    align-items: center;
 }
 
 h1{
-    color: #396;
     font-weight: bold;
     font-size: 50px;
-    margin: 135px 0px 20px;
+    margin: 135px 0px 10px;
 }
 
 #introduction > div{
     padding: 50px;
-    background-color: hotpink;
 }
 
 .smalltext{
